manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisdom-client-<BRANCH_NAME>
  namespace: kube-wisdom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisdom-client
  template:
    metadata:
      labels:
        app: wisdom-client
    spec:
      containers:
        - image: <IMAGE_URI>/<IMAGE_HUB>/<IMAGE_APP>:<BUILD_TAG>
          imagePullPolicy: IfNotPresent
          name: wisdom-client
          ports:
            - containerPort: 9090
              protocol: TCP
              name: http
          livenessProbe:
            httpGet:
              port: 9090
              path: /health
            initialDelaySeconds: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 9090
              path: /health
            initialDelaySeconds: 3
            timeoutSeconds: 2
